--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ section{
 <!-- IMAGEN SUPERIOR -->
 <div class="imagen-superior">
     <video autoplay muted loop>
-        <source src="file:///C:/Users/arqlu/Downloads/Video1.mp4" type="video/mp4">
+        <source src="Video1 (1).mp4" type="video/mp4">
     </video>
 </div>
 
@@ -144,7 +144,7 @@ section{
         <!-- LATERAL IZQUIERDO -->
         <div class="lateral">
             <video autoplay muted loop>
-                <source src="file:///C:/Users/arqlu/Downloads/Video4.mp4" type="video/mp4">
+                <source src="Video4 (1).mp4" type="video/mp4">
             </video>
         </div>
 
@@ -166,7 +166,7 @@ En esta página se ofrece una introducción general al papa Francisco y a los va
         <!-- LATERAL DERECHO -->
         <div class="lateral">
             <video autoplay muted loop>
-                <source src="file:///C:/Users/arqlu/Downloads/Video4.mp4" type="video/mp4">
+                <source src="Video4 (1).mp4" type="video/mp4">
             </video>
         </div>
 
@@ -178,19 +178,19 @@ En esta página se ofrece una introducción general al papa Francisco y a los va
 
     <div class="paz-item">
         <video autoplay muted loop>
-            <source src="file:///C:/Users/arqlu/Downloads/Video5.mp4" type="video/mp4">
+            <source src="Video5 (2).mp4" type="video/mp4">
         </video>
         <button onclick="irAPagina('index.html')">P</button>
     </div>
 
     <div class="paz-item">
-        <img src="file:///C:/Users/arqlu/Downloads/Video2.jpg" alt="Imagen A">
+        <img src="589209db7a3c-gettyimages-1288088474.avif" alt="Imagen A">
         <button onclick="irAPagina('logros.html')">A</button>
     </div>
 
     <div class="paz-item">
         <video autoplay muted loop>
-            <source src="file:///C:/Users/arqlu/Downloads/Video3.mp4" type="video/mp4">
+            <source src="Video3 (1).mp4" type="video/mp4">
         </video>
         <button onclick="irAPagina('logros.html')">Z</button>
     </div>
